Moved to java8 compatibility